--- a/TT Modell/.project
+++ b/TT Modell/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TT Modell</name>
+	<name>TT 20_Modell</name>
 	<comment></comment>
 	<projects>
 	</projects>
