--- a/TT Master/.project
+++ b/TT Master/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TT Master</name>
+	<name>TT 00_Master</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -10,7 +10,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1458114295022</id>
+			<id>0</id>
 			<name></name>
 			<type>6</type>
 			<matcher>
